# pmpp

./: .gitignore  CMakeLists.txt
exercise_3-2/: exercise_3-2.cu  exercise_3-2.py
matrix_multiplication/: matrix_multiplication.cu  matrix_multiplication.py
mean_filter/: mean_filter.cu  mean_filter.py
rgb_to_grayscale/: rgb_to_gray.py  rgb_to_grayscale.cu
src/: c02s06_vectorAddition.cu
